--- a/galeria.css
+++ b/galeria.css
@@ -49,19 +49,21 @@ hr{
     margin-bottom: 10px;
 }
 
-*{
-    box-sizing: border-box;
-}
-
-img{
-    width: 50%;
-
-}
-
 .row{
-    width: 90%;
-    margin: 0 auto;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
+}
+
+.row img{
+    width: 25%;
+    height: auto;
+    padding-top: 30px;
+    box-shadow: #fdd947;
+}
+
+.row h3{
+    text-align: left;
+    padding-top: 25px;
+    margin-bottom: -20px;
 }
