--- a/acercade.css
+++ b/acercade.css
@@ -3,58 +3,49 @@ body{
     color: white;
     font-size: 22px;
     font-family: "Oswald", sans-serif;
+    width: 100%;
 }
 
 a{
-    color: white;
     text-decoration: none;
-}
-
-ul{
-    list-style: none;
-}
-
-.container{
-    width: 90%;
-    margin: auto;
-}
-
-.nav-main{
-    font-size: 17px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 0;
-}
-
-.logo{
-    width: 200px;
-}
-
-.nav-main ul{
-    display: flex;
-}
-
-.nav-main ul li{
-    padding: 15px;
-}
-
-.nav-main ul li a:hover{
-    color: #fdd947;
-    border-bottom: 2px solid #fdd947;
-}
-
-hr{
-    margin-top: -15px;
-    margin-bottom: 10px;
+    padding-left: 25px;
 }
 
 .acercademi h2{
     text-align: center;
     padding-bottom: 20px;
+    padding-top: 20px;
+}
+
+.acercademi p{
+    width: 100%;
+    display: flex;
 }
 
 .acercademi img{
     padding: 0 20%;
     width: 100%;
 }
+
+/*FOOTER*/
+.footer{
+    background:#ffcd04;
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+}
+
+.footer h3{
+    color: black;
+    font-size: 20px;
+    text-align: center;
+}
+
+.footer h3 a{
+    color: black;
+}
+
+.footer h3 a:hover{
+    color: #fdd947;
+}
+
