--- a/contacto.css
+++ b/contacto.css
@@ -4,11 +4,11 @@
 }
 
 body {
-    align-items: center;
     padding-bottom: 40px;
     background-color: black;
     font-size: 22px;
     font-family: "Oswald", sans-serif;
+    width: 100%;
 }
 
 a{
@@ -16,48 +16,16 @@ a{
     text-decoration: none;
 }
 
-ul{
-    list-style: none;
-}
-
-.container{
-    width: 90%;
-    margin: auto;
-}
-
-.nav-main{
-    font-size: 17px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 0;
-}
-
-.logo{
-    width: 200px;
-}
-
-.nav-main ul{
-    display: flex;
-}
-
-.nav-main ul li{
-    padding: 15px;
-}
-
-.nav-main ul li a:hover{
-    color: #fdd947;
-    border-bottom: 2px solid #fdd947;
-}
-
-hr{
-    margin-top: -15px;
-    margin-bottom: 10px;
-    color: whitesmoke;
+nav a{
+    text-decoration: none;
+    padding-left: 25px;
 }
 
 .data{
     padding: 2em;
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
 }
 
 .data ul li{
@@ -75,3 +43,27 @@ hr{
     padding-left: 135px;
 }
 
+/*FOOTER*/
+.footer{
+    background:#ffcd04;
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+}
+
+.footer h3{
+    color: black;
+    font-size: 20px;
+    text-align: center;
+}
+
+.footer h3 a{
+    color: black;
+}
+
+.footer h3 a:hover{
+    color: #fdd947;
+}
+
+@media (max-width: 700px){
+}
