--- a/estilos.css
+++ b/estilos.css
@@ -12,12 +12,8 @@ body{
 }
 
 a{
-    color: white;
     text-decoration: none;
-}
-
-ul{
-    list-style: none;
+    padding-left: 25px;
 }
 
 .container{
@@ -25,36 +21,7 @@ ul{
     margin: auto;
 }
 
-.nav-main{
-    font-size: 17px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 0;
-}
-
-.logo{
-    width: 200px;
-}
-
-.nav-main ul{
-    display: flex;
-}
-
-.nav-main ul li{
-    padding: 15px;
-}
-
-.nav-main ul li a:hover{
-    color: #fdd947;
-    border-bottom: 2px solid #fdd947;
-}
-
 /* PRINCIPAL */
-hr{
-    margin-top: -15px;
-    margin-bottom: 10px;
-}
 
 .principal{
     width: 100%;
@@ -108,7 +75,10 @@ hr{
 
 /*FOOTER*/
 .footer{
-    background: white;
+    background:#ffcd04;
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
 }
 
 .footer h3{
@@ -126,5 +96,8 @@ hr{
 }
 
 @media (max-width: 700px){
-
+    a{
+        text-decoration: none;
+        padding-left: 25px;
+    }
 }
