--- a/iniciar sesion.css
+++ b/iniciar sesion.css
@@ -7,53 +7,16 @@ body {
 }
 
 a{
-    color: white;
     text-decoration: none;
+    padding-left: 25px;
 }
 
-ul{
-    list-style: none;
+
+body {
+    width: 100%;
 }
 
-.container{
-    width: 90%;
-    margin: auto;
-}
 
-.nav-main{
-    font-size: 17px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 0;
-}
-
-.logo{
-    width: 200px;
-}
-
-.nav-main ul{
-    display: flex;
-}
-
-.nav-main ul li{
-    padding: 15px;
-}
-
-.nav-main ul li a:hover{
-    color: #fdd947;
-    border-bottom: 2px solid #fdd947;
-}
-
-hr{
-    margin-top: -15px;
-    margin-bottom: 10px;
-    color: whitesmoke;
-}
-
-html, body {
-    height: 100%;
-}
 .form-container { 
     text-align: center;
     width: 100%;
@@ -83,4 +46,26 @@ html, body {
 
 .error-message{
     color:red;
+}
+
+/*FOOTER*/
+.footer{
+    background:#ffcd04;
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+}
+
+.footer h3{
+    color: black;
+    font-size: 20px;
+    text-align: center;
+}
+
+.footer h3 a{
+    color: black;
+}
+
+.footer h3 a:hover{
+    color: #fdd947;
 }
