--- a/iniciar sesion.css
+++ b/iniciar sesion.css
@@ -4,6 +4,7 @@ body {
     background-color: black;
     font-size: 22px;
     font-family: "Oswald", sans-serif;
+    height: 100%;
 }
 
 a{
@@ -13,7 +14,9 @@ a{
 
 
 body {
-    width: 100%;
+    width: 90%;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 
