--- a/servicios.css
+++ b/servicios.css
@@ -3,6 +3,9 @@ body{
     color: white;
     font-size: 22px;
     font-family: "Oswald", sans-serif;
+    width: 90%;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 a{
@@ -14,7 +17,9 @@ a{
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
-    width: 100%;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .row img{
